--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
 
+    //paging
+    def paging_version = "3.0.0-alpha03"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 }
